[project]
name = "tempered"
authors = [{name = "Ben Brady", email = "benbrady04.bb@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "A fast, strongly typed html templating library for python"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4~=4.12.2",
    "minify-html~=0.15.0",
    "tinycss2~=1.2.1",
    "rcssmin!=1.1.2",
    "typing_extensions",
    "markupsafe; python_version <= '3.9'",
    "astor; python_version <= '3.8'",
]
requires-python = ">=3.7"

[project.optional-dependencies]
sass = ["libsass"]
test = [
    "pytest",
    "pytest-asyncio",
    "mypy",
]
dev = [
    "black",
    "isort",
    "autoflake",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = ["tests/", "benchmarks/", "examples/", ".github/"]

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 6
skip_gitignore = true
known_first_party = ["typing_extensions"]
lines_between_sections = 0

[tool.ruff]
ignore-init-module-imports = true
target-version = "py37"
